2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg: 
	  prettyfiy my pictures ;)

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  new news entry about the tour

2008-03-12  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/data/tour,
	  www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-main.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-share.jpg,
	  www.gnome.org/projects/cheese/data/tour/cheese-video.jpg,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  restructure the cheese website, add a tour

2008-03-11  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  update release notes

2008-03-11  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/screenshots/cheese-2.22.0_2.jpg,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.22.0.jpg,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,