@@ -20,8 +20,8 @@
         <li class="current"><a href="index.html">Home</a>
         <ul>
           <li><a href="screenshots.html">Screenshots</a> </li>
-          <li><a href="download.html">Download</a> </li>
           <li><a href="tour.html">Tour</a> </li>
+          <li><a href="download.html">Download</a> </li>
           <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
           <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
           <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
