@@ -22,8 +22,8 @@
           href="index.html">Home</a>
         <ul>
           <li><a href="screenshots.html">Screenshots</a> </li>
-          <li><a href="download.html">Download</a> </li>
           <li><a href="tour.html">Tour</a> </li>
+          <li><a href="download.html">Download</a> </li>
           <li><a href="http://live.gnome.org/Cheese/FAQ">FAQ</a> </li>
           <li><a href="http://live.gnome.org/Cheese">Wiki</a> </li>
           <li><a href="http://live.gnome.org/Cheese/Snapshots">Snapshots</a> </li>
@@ -62,30 +62,16 @@
         </div>
 
         <div class="screenshot">
-          <h2>Screenshots for 0.2.1</h2>
-          <a href="data/screenshots/cheese-0.2.1.jpg">
-            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" height="300px" />
-          </a>
-        </div>
-
-        <div class="screenshot">
-          <h2>Screenshots for 0.1.2, 0.1.3</h2>
-          <a href="data/screenshots/cheese-0.1.2.jpg">
-            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" height="300px" />
-          </a>
-        </div>
-
-        <div class="screenshot">
-          <h2>Screenshots for 0.1.0</h2>
-          <a href="data/screenshots/cheese-0.1.0.jpg">
-            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" height="300px" />
-          </a>
-        </div>
-
-        <div class="screenshot">
           <h2>Screenshots for 0.2.2, 0.2.3, 0.2.4</h2>
           <a href="data/screenshots/cheese-0.2.2.jpg">
             <img src="data/screenshots/cheese-0.2.2.jpg" alt="cheese-0.2.2.jpg" height="300px" />
+          </a>
+        </div>
+
+        <div class="screenshot">
+          <h2>Screenshots for 0.2.1</h2>
+          <a href="data/screenshots/cheese-0.2.1.jpg">
+            <img src="data/screenshots/cheese-0.2.1.jpg" alt="cheese-0.2.1.jpg" height="300px" />
           </a>
         </div>
 
@@ -97,12 +83,26 @@
         </div>
 
         <div class="screenshot">
+          <h2>Screenshots for 0.1.2, 0.1.3</h2>
+          <a href="data/screenshots/cheese-0.1.2.jpg">
+            <img src="data/screenshots/cheese-0.1.2.jpg" alt="cheese-0.1.2.jpg" height="300px" />
+          </a>
+        </div>
+
+        <div class="screenshot">
           <h2>Screenshots for 0.1.1</h2>
           <a href="data/screenshots/cheese-0.1.1.jpg">
             <img src="data/screenshots/cheese-0.1.1.jpg" alt="cheese-0.1.1.jpg" height="300px" />
           </a>
           <a href="data/screenshots/cheese-0.1.1_2.jpg">
             <img src="data/screenshots/cheese-0.1.1_2.jpg" alt="cheese-0.1.1_2.jpg" height="300px" />
+          </a>
+        </div>
+
+        <div class="screenshot">
+          <h2>Screenshots for 0.1.0</h2>
+          <a href="data/screenshots/cheese-0.1.0.jpg">
+            <img src="data/screenshots/cheese-0.1.0.jpg" alt="cheese-0.1.0.jpg" height="300px" />
           </a>
         </div>
 
