@@ -1,5 +1,13 @@
 2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/screenshots.html,
+	  www.gnome.org/projects/cheese/tour.html: 
+	  screenshots were messed up, menu change
+
+2008-03-12  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/data/tour/cheese-about.jpg,
 	  www.gnome.org/projects/cheese/data/tour/cheese-countdown.jpg,
 	  www.gnome.org/projects/cheese/data/tour/cheese-effects.jpg,
